fix restart spacing

--- a/self_checklist_proto/static/style.css
+++ b/self_checklist_proto/static/style.css
@@ -536,6 +536,7 @@ input[type=checkbox]:checked {
   flex-direction: row;
   width: unset;
   margin-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .progression-step {
@@ -559,6 +560,7 @@ input[type=checkbox]:checked {
 @media (max-width:641px) { 
   .progression-wrapper.simple .progression {
     flex-direction: column;
+    padding-bottom: none;
   }
 
   .progression-wrapper.simple .progression-step {
